--- a/roles/kind/templates/kind-config.yaml.j2
+++ b/roles/kind/templates/kind-config.yaml.j2
@@ -2,29 +2,33 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 networking:
+{% if 'minimum' not in ansible_run_tags %}
   disableDefaultCNI: true
+{% endif %}
   podSubnet: 192.168.0.0/16
+{% if external_api == True %}
   # WARNING: It is _strongly_ recommended that you keep this the default
   # (127.0.0.1) for security reasons. However it is possible to change this.
   apiServerAddress: "0.0.0.0"
+{% endif %}
   # By default the API server listens on a random open port.
   # You may choose a specific port but probably don't need to in most cases.
   # Using a random port makes it easier to spin up multiple clusters.
   apiServerPort: 6443
 nodes:
   - role: control-plane
-    # extraMounts:
-    # - containerPath: /var/lib/kubelet/config.json
-    #   hostPath: /home/tcolbert/.docker/config.json
+    image: {{ kubernetes_version }}
+{% if docker_config == True %}
+    extraMounts:
+    - containerPath: /var/lib/kubelet/config.json
+      hostPath: {{  user_registered.home }}.docker/config.json
+{% endif %}
+{% for kind_workers in range(kind_workers) %}
   - role: worker
-    # extraMounts:
-    # - containerPath: /var/lib/kubelet/config.json
-    #   hostPath: /home/tcolbert/.docker/config.json
-  - role: worker
-    # extraMounts:
-    # - containerPath: /var/lib/kubelet/config.json
-    #   hostPath: /home/tcolbert/.docker/config.json
-  - role: worker
-    # extraMounts:
-    # - containerPath: /var/lib/kubelet/config.json
-    #   hostPath: /home/tcolbert/.docker/config.json
+    image: {{ kubernetes_version }}
+{% if docker_config == True %}
+    extraMounts:
+    - containerPath: /var/lib/kubelet/config.json
+      hostPath: {{  user_registered.home }}/.docker/config.json
+{% endif %}
+{% endfor %}
