--- a/roles/kind/templates/kind-config.yaml.j2
+++ b/roles/kind/templates/kind-config.yaml.j2
@@ -2,7 +2,7 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 networking:
-{% if 'cni_network' not in "" %}
+{% if cni_network is defined and cni_network and cni_network != "" %}
   disableDefaultCNI: true
 {% endif %}
   podSubnet: 192.168.0.0/16
